# fibjs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  appveyor.yml  azure-pipelines.yml  build  build.cmd  load_dll.js  sciter.js  tsconfig.json
.appveyor/: install-llvm.cmd
.github/workflows/: build.sh  build.yml  generate_jsc.sh  release.sh  release.yml  set-env-vars.sh
.travis/: build.sh  release.sh
addons/: build.cmake
addons/addon-hello/: CMakeLists.txt
addons/addon-hello/src/: hello.cpp
fibjs/: CMakeLists.txt  fibjs.vcxproj  fibjslib.vcxproj  fibjslib.vcxproj.filters
fibjs/include/: AsyncCall.h  Chain.h  Fiber.h  Isolate.h  Module.h  Runtime.h  SciterView.h  Stat.h  SubProcess.h  TTYStream.h  Timer.h  TypeScript.h  fibjs.h  object.h  options.h  utils.h
fibjs/installer/: build.cmake  gen_install.js
fibjs/program/: CMakeLists.txt  fibjs.vcxproj  fibjs_gui.vcxproj
fibjs/tools/: proj.txt
idl/us-en/: Buffer.idl  BufferedStream.idl  Chain.idl  ChildProcess.idl  Cipher.idl  Condition.idl  DbConnection.idl  DgramSocket.idl  Digest.idl  Event.idl  EventEmitter.idl  FSWatcher.idl  Fiber.idl  File.idl  Handler.idl  HeapGraphEdge.idl  HeapGraphNode.idl  HeapSnapshot.idl  HttpClient.idl  HttpCollection.idl  HttpCookie.idl  HttpHandler.idl  HttpMessage.idl  Image.idl  (+121 more)
idl2/: idlgen.js  ir.d.ts  ts2json.js  utils.js
installer/: installer.vcxproj
scripts/: download_vender.sh
test/: fs_test.js  fswatch_test.js  gd_test.js  gui_test.js  http_test.js  stream_test.js  tty_test.js  util_test.js
tools/: changelog.js  gen_scripts.js  idlc.js  package.json
(+374 files in other folders)
